--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-starter-template-codestargm",
+  "name": "neemble-io",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,12 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^3.7.1",
     "framer-motion": "^6.2.8",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
-    "react-intersection-observer": "^8.33.1",
-    "react-player": "^2.9.0"
+    "react-intersection-observer": "^8.33.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
